Accounts bugs (#139)
* Update: Change styles in modal and delete button, adds Url component

* Update: Changes to feature description

* update: clean code and updates field validation

* re-add copy button

* Update: Pass param correct to remove access token

* Fix domains table not showing

* Update: Adds dropdown in instance icon to show domains with branch live

* adds domain to remove modal

* shows empty domain table

* Update: Change login in request domains, now is setting in Fetch sites and just request once+

* Update: Adding dropdown domains in instance settings

* Update: change flow in set domains dropdown from store

* updates behaviour on getting domains

* fixed: var reference error

* removed: superfluous logs

* fixed: instance api paths

* fixed: instance api path protocol

* fixed: react className attr

--- a/src/apps/properties/src/views/PropertyOverview/PropertyOverview.less
+++ b/src/apps/properties/src/views/PropertyOverview/PropertyOverview.less
@@ -32,6 +32,37 @@
   width: 100vw;
 }
 
+.DomainsDropDown {
+  position: relative;
+  color: #497edf;
+  font-weight: 900;
+  cursor: pointer;
+}
+
+.DomainsDropDownBtn {
+  color: #497edf;
+  cursor: pointer;
+  background: none;
+  margin-left: 10px;
+}
+
+.DomainsDropDownContent {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  a {
+    display: block;
+    text-align: left !important;
+  }
+}
+
+.DomainsDropDown:hover .DomainsDropDownContent {
+  display: block;
+}
+
 @media (max-width: 780px) {
   .PropertyOverview {
     width: 100vw;
